<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android2</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="androidThemes">Android Themes</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="lightTheme">Light Theme</string>
    <string name="darkLightTheme">Light and Dark Bar Theme</string>
    <string name="coloredTitles">Colored Titles</string>
    <string name="redTitle">Red Title</string>
    <string name="greenTitle">Green Title</string>
    <string name="blueTitle">Blue Title</string>
    <string name="imageThemes">Image Theme</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="overlayActionBar">Overlay ActionBar</string>
    <string name="hideActionBar">Hide ActionBar</string>
    <string name="showActionBar">Show ActionBar</string>
    <string name="title_activity_display_message">Display Message</string>
    <string name="action_ThemeDark">Dark</string>
    <string name="action_ThemeLight">Light</string>
    <string name="action_ThemeDarkLight">Dark/Light</string>
    <string name="action_ThemeColor">Color</string>
    <string name="action_ThemeImage">Image</string>
    <string name="action_ThemeOverlayActionBar">Overlay</string>
    <string name="hello_android">Hello Android2!</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_hideActionBar">Hide ActionBar</string>
    <string name="button_showActionBar">Show ActionBar</string>
    <string name="title_activity_theme_dark">Dark Theme</string>
    <string name="title_activity_theme_light">Light Theme</string>
    <string name="title_activity_theme_dark_light">Dark / Light Theme</string>
    <string name="title_activity_theme_color">Color Theme</string>
    <string name="title_activity_theme_image">Image Theme</string>
    <string name="title_activity_theme_overlay_action_bar">ThemeOverlayActionBarActivity</string>
    <string name="title_activity_theme_color_title_blue">Colored Title</string>
    <string name="title_activity_theme_color_title_red">ThemeColorTitleRedActivity</string>
    <string name="title_activity_theme_hide_action_bar">ThemeHideActionBarActivity</string>

</resources>
