<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:android2="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_light_help"
        android:orderInCategory="100"
        android2:showAsAction="ifRoom"
        android:title="@string/action_help" />
    
    <item
        android:id="@+id/action_ThemeDark"
        android:orderInCategory="100"
        android2:showAsAction="never"
        android:title="@string/action_ThemeDark" />
    
    <item
        android:id="@+id/action_ThemeLight"
        android:orderInCategory="100"
        android2:showAsAction="never"
        android:title="@string/action_ThemeLight" />
    
    <item
        android:id="@+id/action_ThemeDarkLight"
        android:orderInCategory="100"
        android2:showAsAction="never"
        android:title="@string/action_ThemeDarkLight" />
    
    <item
        android:id="@+id/action_ThemeColor"
        android:orderInCategory="100"
        android2:showAsAction="never"
        android:title="@string/action_ThemeColor" />
    
    <item
        android:id="@+id/action_ThemeImage"
        android:orderInCategory="100"
        android2:showAsAction="never"
        android:title="@string/action_ThemeImage" />

</menu>
